<resources>
    <string name="app_name">Not Faggot!</string>
    <string name="date_pattern">dd.MM.yyyy</string>

    <string name="shared_preferences_file">not_shared_preferences</string>
    <string name="shared_preferences_user_token">current_user_token</string>
    <string name="shared_preferences_null_token">null</string>

    <string name="login_title">Вход</string>
    <string name="login_button_text">Войти</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_toast_on_failed">Failed to login. Check internet connection</string>
    <string name="login_toast_on_incorrect_login_form_data">Incorrect login form data</string>

    <string name="registration_title">Регистрация</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="registration_name_hint">Name</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_repeat_password_hint">Repeat password</string>
    <string name="registration_toast_on_failed">Failed to register. Check internet connection</string>
    <string name="registration_toast_on_incorrect_register_form_data">Incorrect register form data</string>

    <string name="tasks_list_no_task_img_description">No tasks</string>
    <string name="tasks_list_no_task_text">У вас пока нет дел.\nСчастливый вы человек!</string>
    <string name="task_list_exit_description">Exit button</string>

    <string name="task_null_name">NULL</string>
    <string name="task_category_name">Default category name</string>
    <string name="task_task_name">Default task name</string>
    <string name="task_task_beginning">Default task beginning</string>

    <string name="details_date_default">00.00.0000</string>
    <string name="details_task_name_default">Task name</string>
    <string name="details_task_state_default">Task state</string>
    <string name="details_task_description_default">Task description</string>
    <string name="details_task_category_default">Task category</string>
    <string name="details_task_priority_default">Task priority</string>
    <string name="details_task_time_img_description">Time icon</string>
    <string name="details_task_category_img_description">Category icon</string>
    <string name="details_edit">Редактировать</string>
    <string name="details_task_done">Выполнено</string>
    <string name="details_task_not_done">Не выполнено</string>

    <string name="edit_screen_name_default">Screen name</string>
    <string name="edit_screen_title_create">Добавить заметку</string>
    <string name="edit_screen_title_edit">Изменить заметку</string>
    <string name="edit_task_title_hint">Название</string>
    <string name="edit_task_description_hint">Описание</string>
    <string name="edit_task_deadline_hint">Сделать до</string>
    <string name="edit_task_title_is_empty">Это поле не может быть пустым</string>
    <string name="edit_task_description_is_empty">Это поле не может быть пустым</string>
    <string name="edit_task_description_too_long">Это поле не может быть настолько большим</string>
    <string name="edit_task_deadline_is_empty">Это поле не может быть пустым</string>
    <string name="edit_alert_dialog_hint">Название</string>
    <string name="edit_description">Описание</string>
    <string name="edit_add_category_description">Add category</string>
    <string name="edit_alert_dialog_save_title">Сохранить?</string>
    <string name="edit_alert_dialog_save_positive_button">Save</string>
    <string name="edit_alert_dialog_save_neutral_button">Cancel</string>
    <string name="edit_alert_dialog_title">Добавить категорию</string>
    <string name="edit_alert_dialog_positive_button">Add</string>
    <string name="edit_alert_dialog_negative_button">Cancel</string>
    <string name="edit_save">Сохранить</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_task_create">TaskCreateActivity</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="title_activity_tasks_list">TasksListActivity</string>

</resources>
